# otk

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README
include/otk/: cli.hpp  converter.hpp  file.hpp  odb.hpp  otk.hpp  output.hpp
src/otk/: cli.cpp  converter.cpp  file.cpp  main.cpp  odb.cpp  otk.cpp  output.cpp
src/otk_cli/: otk_cli.cpp
